objects/PortalActivity__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <description>Artemus.dbo.Portal_Audit_Log(500)</description>
        <inlineHelpText>Tracks the action/event for this Portal Activity record.</inlineHelpText>
        <label>Action</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact related to this Portal Activity.  If this value is blank, the contact has been deleted from the system.</description>
        <inlineHelpText>The contact related to this Portal Activity.  If this value is blank, the contact has been deleted from the system.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Activities</relationshipLabel>
        <relationshipName>Portal_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Portal Activity.  Contains supporting or additional information related to the activity.</description>
        <inlineHelpText>Description of the Portal Activity.  Contains supporting or additional information related to the activity.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventTime__c</fullName>
        <description>Artemus.dbo.Portal_audit_log.event_time(datetime)</description>
        <inlineHelpText>Time the Portal Activity event occurred</inlineHelpText>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <description>Artemus.dbo.portal_audit_log.folder(30)</description>
        <inlineHelpText>Tracks folder from PRCG portal</inlineHelpText>
        <label>Folder</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>artemus.dbo.portal_audit_log.last_mod_date(datetime)</description>
        <inlineHelpText>Tracks Last Modified Date from external application</inlineHelpText>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedUser__c</fullName>
        <description>artemus.dbo.portal_audit_log.last_mod_user(50)</description>
        <inlineHelpText>Tracks Last Modified User from external application</inlineHelpText>
        <label>Last Modified User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginMethod__c</fullName>
        <description>Tracks how user authenticated (i.e., via website or LinkedIn)</description>
        <inlineHelpText>Tracks how user authenticated (i.e., via website or LinkedIn)</inlineHelpText>
        <label>Login Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <description>artemus.dbo.portal_audit_log.portfolio + artemus.dbo.portal_audit_log.portfolio2</description>
        <inlineHelpText>Tracks Portfolio for PRGC portal.</inlineHelpText>
        <label>Portfolio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referer__c</fullName>
        <description>Artemus.dbo.portal_audit_log.referer(200)</description>
        <inlineHelpText>Remote address (the base URL) that initiated this Portal Activity record.</inlineHelpText>
        <label>Referer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteAddress__c</fullName>
        <description>Artemus.dbo.portal_audit_log.remote_address(200)</description>
        <inlineHelpText>IP Address for this Portal Activity record.</inlineHelpText>
        <label>Remote Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepId__c</fullName>
        <description>An additional Id of the contact to which this Portal Activity belongs (i.e., email, MARS Id, etc.)</description>
        <inlineHelpText>An additional Id of the contact to which this Portal Activity belongs (i.e., email, MARS Id, etc.)</inlineHelpText>
        <label>Rep Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <description>artemus.dbo.portal_audit_log.session_id(100)</description>
        <inlineHelpText>Session ID for this Portal Activity record.</inlineHelpText>
        <label>Session Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>The Source of this Portal Activity</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRCG Advisor Portal</fullName>
                </value>
                <value>
                    <fullName>NGAM Website</fullName>
                </value>
                <value>
                    <fullName>Fugent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>artemus.dbo.portal_audit_log.url(200)</description>
        <inlineHelpText>The detailed URL (page) from which the activity originates.</inlineHelpText>
        <label>Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAgent__c</fullName>
        <description>artemus.dbo.portal_audit_log.user_agent(200)</description>
        <inlineHelpText>The browser for this Portal Activity record.</inlineHelpText>
        <label>User Agent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <inlineHelpText>The SFID of the user that logging into the PRGC portal.</inlineHelpText>
        <label>User Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the User that has logged in to create this Portal Activity (PRGC)</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <description>Artemus.dbo.Portal_Audit_Log.Code(100)</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for this Portal Activity record.  This is sometimes the SFID of the record and sometimes fed in through the system calling the activity creation.</inlineHelpText>
        <label>code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Tracks important web and portal activities.  Records created systematically by Apex/Web Services when events occur.</description>
    <label>Portal Activity</label>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Portal Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>